<resources>
    <string name="app_name">EcoSnap</string>
    <string name="profile">Profile</string>
    <string name="ecosnap">EcoSnap</string>
    <string name="logo">logo</string>
    <string name="posts">posts</string>
    <string name="actions">A</string>
    <string name="comment">C</string>
    <string name="post_title">Post Title</string>
    <string name="like">Like</string>
    <string name="action">A</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="likebutton">likeButton</string>
    <string name="todo">TODO</string>
    <string name="enter_your_contribution">Enter your contribution</string>
    <string name="opt_in_out_for_the_cause">Opt In/Out for the cause</string>
    <string name="out">Out</string>
    <string name="in">In</string>
    <string name="donate">Donate</string>
</resources>