<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/participate"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/opening_wallpaper">

    <!-- Top Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:src="@drawable/ecosnap_transparent"
            android:contentDescription="@string/logo" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Content Layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topToolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Post Image -->
            <ImageView
                android:id="@+id/postImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/posts"
                android:layout_marginTop="8dp"/>

            <!-- Title -->
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/postImage"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/post_title"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <!-- Description -->
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_below="@id/title"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:text="@string/description"
                android:textColor="@color/black"/>

            <!-- Opt In/Out Title -->
            <TextView
                android:id="@+id/choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:text="@string/opt_in_out_for_the_cause"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <!-- RadioGroup -->
            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@id/choice"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in"
                    android:textSize="18sp"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/out"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RadioGroup>

            <!-- Contribution EditText -->
            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/radioGroup1"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:hint="@string/enter_your_contribution"
                android:textSize="18sp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="number"
                android:digits="0123456789" />

            <!-- Donate Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/donate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/amount"
                android:layout_marginTop="16dp"
                android:background="@drawable/create_post_button_design"
                android:text="@string/donate"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
